# Gashori100

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
q_001_010/: 000_hello_world.cpp  001_channel_swapping.cpp  002_grayscale.cpp  003_binalization.cpp  004_ohtsu_binalization.cpp  005_hsv_transform.cpp  006_color_subtraction.cpp  007_pool_average.cpp  008_pool_max.cpp  009_gaussian_filter.cpp  010_median_filter.cpp  CMakeLists.txt
