add_executable(q000 000_hello_world.cpp)
add_executable(q001 001_channel_swapping.cpp)
add_executable(q002 002_grayscale.cpp)
add_executable(q003 003_binalization.cpp)
add_executable(q004 004_ohtsu_binalization.cpp)
add_executable(q005 005_hsv_transform.cpp)
add_executable(q006 006_color_subtraction.cpp)
add_executable(q007 007_pool_average.cpp)
add_executable(q008 008_pool_max.cpp)
add_executable(q009 009_gaussian_filter.cpp)